Add footer to my different pages and improve homepage

--- a/index.html
+++ b/index.html
@@ -89,25 +89,24 @@
       </div>
     </nav>
 
-    <div class="content-container container">
+    <div class="container content-container">
       <div class="row">
         <div class="col-12 col-md-6 content introduction-content">
-          <h2 class="text-center">
-            PRODUCT OWNER WITH A PASSION FOR FRONTEND DEVELOPMENT
-          </h2>
-          <h1 class="text-center mt-5">Victoria Louise Steinwachs</h1>
+          <h2>PRODUCT OWNER WITH A PASSION FOR FRONTEND DEVELOPMENT</h2>
+          <h1 class="mt-5 h1-shadow-hp">Victoria Louise Steinwachs</h1>
           <p class="introduction-paragraph">
-            Welcome! I'm Victoria, a creative spirit with a heart for people, furry friends and
-            a passion for holistic health and design. After years in the
-            bustling city of Berlin, I’ve found my way to the serene coast of
-            Schleswig-Holstein, embracing a life of mindfulness, thoughtful
-            design, and intentional living. </br> When I’m not coding or developing
-            creative projects, you’ll find me at the coast with my dogs or in a
-            CrossFit gym. Let’s discover together how to bring balance and
-            artistry into a busy world!
+            Welcome! I'm Victoria, a creative spirit with a passion for people,
+            furry friends, and a love for holistic health and design. My journey
+            has taken me from studying architecture and art history to exploring
+            Italian, diving into IT consulting, and discovering the power of
+            CrossFit and nutrition. After years in the bustling city of Berlin,
+            I’ve found my way to the peaceful coast of Schleswig-Holstein,
+            embracing a life rooted in mindfulness, thoughtful design, and
+            intentional living. Let’s explore together how to bring balance and
+            creativity to this busy world!
           </p>
         </div>
-        <div class="col-6 container d-flex align-items-end">
+        <div class="col-6 img-container d-flex align-items-end">
           <img
             src="/images/Vicky5.png"
             class="img-fluid d-none d-sm-block float-end img-vicky"
@@ -117,53 +116,110 @@
       </div>
     </div>
 
+    <div class="card mt-5 container">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img
+            src="..."
+            class="img-fluid rounded-start d-none d-sm-block"
+            alt="About Page"
+          />
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h4 class="card-title">About Me</h4>
+            <p class="card-text">
+              From art history to IT, with a dash of Italian and a love for
+              health—my journey is anything but typical. Take a peek at what
+              brought me here!
+            </p>
+            <a href="/about.html" class="btn primary-link">About Me</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mt-5 container">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img
+            src="..."
+            class="img-fluid rounded-start d-none d-sm-block"
+            alt="About Page"
+          />
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h4 class="card-title">My Projects</h4>
+            <p class="card-text">
+              Want to know more about my projects? Explore my portfolio.
+            </p>
+            <a href="/projects.html" class="btn primary-link">My Projects</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mt-5 container">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img
+            src="..."
+            class="img-fluid rounded-start d-none d-sm-block"
+            alt="About Page"
+          />
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h4 class="card-title">Contact Me</h4>
+            <p class="card-text">
+              Interested in collaborating or learning more about me and my work?
+              Let's connect!
+            </p>
+            <a href="/contact.html" class="btn primary-link">Contact Me</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer>
       <div
-        class="content-container d-flex align-items-center justify-content-around"
+        class="content-container container d-flex flex-column align-items-center"
       >
-        <div>
-          <h3>Work Inquiry</h3>
-          <p>Let's work together</p>
+        <div class="social-links d-flex justify-content-evenly mb-5">
+          <a
+            href="https://www.linkedin.com/in/victoria-louise-steinwachs"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/fit.paws.and.sea.views/"
+            target="_blank"
+            title="Instagram Profile"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://github.com/vilouspics"
+            target="_blank"
+            title="Github Profile"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
         </div>
-        <div class="">
-          <a href="#" class="btn primary-link">Contact Me</a>
-        </div>
+        <p class="text-center">
+          This project was coded by Victoria Louise Steinwachs and is
+          <a
+            class="github-link"
+            href="https://github.com/vilouspics/My-project-portfolio"
+            >open-sourced</a
+          >.
+        </p>
       </div>
-      <a
-        href="mailto:victoria.steinwachs@protonmail.com"
-        class="email-link mt-5"
-        >victoria.steinwachs@protonmail.com</a
-      >
-      <div class="social-links d-flex justify-content-center">
-        <a
-          href="https://www.linkedin.com/in/victoria-louise-steinwachs"
-          target="_blank"
-          title="LinkedIn Profile"
-        >
-          <i class="fa-brands fa-linkedin"></i>
-        </a>
-        <a
-          href="https://www.instagram.com/fit.paws.and.sea.views/"
-          target="_blank"
-          title="Instagram Profile"
-        >
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a
-          href="https://github.com/vilouspics"
-          target="_blank"
-          title="Github Profile"
-        >
-          <i class="fa-brands fa-github"></i>
-        </a>
-      </div>
-      <p class="text-center mt-5">
-        This project was coded by Victoria Louise Steinwachs and is
-        <a href="https://github.com/vilouspics/My-project-portfolio">
-          open-sourced</a
-        >.
-      </p>
     </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
