--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
     </nav>
 
     <section class="container content-container mt-5 pt-5">
-      <h1 class="text-start">My Projects</h1>
+      <h1 class="text-start h1-shadow-projects">My Projects</h1>
       <p class="mt-5">
         Three years ago, SheCodes sparked my curiosity, but my journey had to
         wait as I immersed myself in Python and SQL for consulting. With a
@@ -206,5 +206,56 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div
+        class="content-container container d-flex align-items-center justify-content-around"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p>Let's work together</p>
+        </div>
+        <div class="">
+          <a href="/contact.html" class="btn primary-link">Contact Me</a>
+        </div>
+      </div>
+
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.linkedin.com/in/victoria-louise-steinwachs"
+          target="_blank"
+          title="LinkedIn Profile"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a
+          href="https://www.instagram.com/fit.paws.and.sea.views/"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://github.com/vilouspics"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        This project was coded by Victoria Louise Steinwachs and is
+        <a
+          class="github-link"
+          href="https://github.com/vilouspics/My-project-portfolio"
+        >
+          open-sourced</a
+        >.
+      </p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
