--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
     <div class="content-container container">
       <div class="row">
         <div class="col-12 col-md-6 content">
-          <h1 class="text-start">Hi, it's me</h1>
+          <h1 class="mt-5 text-start h1-shadow-about">Hi, it's me</h1>
           <div class="content text-start">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -126,5 +126,56 @@
         victoria.steinwachs@protonmail.com
       </a>
     </div>
+    <footer>
+      <div
+        class="content-container container d-flex align-items-center justify-content-around"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p>Let's work together</p>
+        </div>
+        <div class="">
+          <a href="/contact.html" class="btn primary-link">Contact Me</a>
+        </div>
+      </div>
+
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.linkedin.com/in/victoria-louise-steinwachs"
+          target="_blank"
+          title="LinkedIn Profile"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a
+          href="https://www.instagram.com/fit.paws.and.sea.views/"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://github.com/vilouspics"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        This project was coded by Victoria Louise Steinwachs and is
+        <a
+          class="github-link"
+          href="https://github.com/vilouspics/My-project-portfolio"
+        >
+          open-sourced</a
+        >.
+      </p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
