--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
     <div class="content-container container">
       <div class="row">
         <div class="col-12 col-md-6 content">
-          <h1>Contact Me</h1>
+          <h1 class="mt-5 h1-shadow-contact">Contact Me</h1>
           <h2>Let's get in touch!</h2>
           <p>
             Whether you're here for a chat, a collaboration, or just to say hi,
@@ -126,11 +126,62 @@
         <div class="col-6 container d-flex align-items-end">
           <img
             src="images/Vicky4.PNG"
-            class="img-fluid d-none d-sm-block float-end img-vicky"
+            class="img-fluid d-none d-sm-block float-end img-vicky img-vicky-homepage"
             alt="Victoria smiling in a winter coat and gloves, giving two thumbs up"
           />
         </div>
       </div>
     </div>
+    <footer>
+      <div
+        class="content-container container d-flex align-items-center justify-content-around"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p>Let's work together</p>
+        </div>
+        <div class="">
+          <a href="/contact.html" class="btn primary-link">Contact Me</a>
+        </div>
+      </div>
+
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.linkedin.com/in/victoria-louise-steinwachs"
+          target="_blank"
+          title="LinkedIn Profile"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a
+          href="https://www.instagram.com/fit.paws.and.sea.views/"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://github.com/vilouspics"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        This project was coded by Victoria Louise Steinwachs and is
+        <a
+          class="github-link"
+          href="https://github.com/vilouspics/My-project-portfolio"
+        >
+          open-sourced</a
+        >.
+      </p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
