--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
       </div>
     </nav>
 
-    <div class="container content-container">
+    <div class="container content-container start-section">
       <div class="row">
         <div class="col-12 col-md-6 content introduction-content">
           <h2>PRODUCT OWNER WITH A PASSION FOR FRONTEND DEVELOPMENT</h2>
           <h1 class="mt-5 h1-shadow-hp">Victoria Louise Steinwachs</h1>
-          <p class="introduction-paragraph">
+          <p class="introduction-paragraph mt-5">
             Welcome! I'm Victoria, a creative spirit with a passion for people,
             furry friends, and a love for holistic health and design. My journey
             has taken me from studying architecture and art history to exploring
@@ -184,9 +184,9 @@
 
     <footer>
       <div
-        class="content-container container d-flex flex-column align-items-center"
+        class="content-container container footer-container d-flex flex-column align-items-center"
       >
-        <div class="social-links d-flex justify-content-evenly mb-5">
+        <div class="social-links d-flex justify-content-evenly mb-4">
           <a
             href="https://www.linkedin.com/in/victoria-louise-steinwachs"
             target="_blank"
@@ -209,7 +209,7 @@
             <i class="fa-brands fa-github"></i>
           </a>
         </div>
-        <p class="text-center">
+        <p class="text-center mb-5">
           This project was coded by Victoria Louise Steinwachs and is
           <a
             class="github-link"
