--- a/projects.html
+++ b/projects.html
@@ -84,8 +84,8 @@
       </div>
     </nav>
 
-    <section class="container content-container mt-5 pt-5">
-      <h1 class="text-start h1-shadow-projects">My Projects</h1>
+    <section class="container content-container start-section">
+      <h1 class="text-start mt-5 h1-shadow-projects">My Projects</h1>
       <p class="mt-5">
         Three years ago, SheCodes sparked my curiosity, but my journey had to
         wait as I immersed myself in Python and SQL for consulting. With a
