--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container bg-light">
         <a class="navbar-brand" href="index.html">Victoria Louise Steinwachs</a>
         <button
           class="navbar-toggler"
