work on images and about page content

--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
     <title>About Victoria: My Journey in Web Development</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container bg-light">
         <a class="navbar-brand" href="/index.html"
           >Victoria Louise Steinwachs</a
         >
@@ -90,34 +90,110 @@
         </div>
       </div>
     </nav>
+
     <div class="content-container container start-section">
       <div class="row">
-        <div class="col-12 col-md-6 content">
-          <h1 class="mt-5 text-start h1-shadow-about">Hi, it's me</h1>
-          <div class="content text-start">
-            <p class="mt-5">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-              qui alias veniam excepturi rem dolor fugit dignissimos, sed
-              voluptatum blanditiis harum.
-            </p>
-            <a href="" class="btn btn-outline-secondary contact-button"
-              >Contact Me</a
-            >
-          </div>
+        <h1 class="mt-5 text-start h1-shadow-about">Hi, it's me</h1>
+        <div class="content text-start">
+          <p class="mt-5">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum.
+          </p>
         </div>
-        <div class="col-6 container d-flex align-items-end">
+      </div>
+    </div>
+
+    <div class="content2-container container bg-light">
+      <div class="row justify-content-center gap-5">
+        <div class="col-6 col-md-4 mt-5 mb-5">
           <img
-            src="/images/Vicky3.png"
-            class="img-fluid d-none d-sm-block float-end img-vicky"
-            alt="Victoria drinking coffee"
+            src="/images/Vicky1.jpg"
+            class="rounded img-fluid img-about"
+            alt="..."
           />
+        </div>
+        <div class="col-6 col-md-4 mt-5 mb-5">
+          <img
+            src="/images/Vicky2.jpg"
+            class="rounded img-fluid img-about"
+            alt="..."
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container content-container">
+      <div class="row">
+        <h2>Welcome to My World</h2>
+        <h3 class="mt-2">
+          Embracing Change: A Journey of Creativity and Well-Being
+        </h3>
+        <p class="mt-5">
+          Welcome! I’m Victoria, and my journey has taken me from the world of
+          architecture and IT consulting to exploring the deeper connection
+          between design, wellness, and nutrition. After 10 years in Berlin, I
+          moved to the tranquil coast of Schleswig-Holstein with my two Vizslas,
+          Chewie and Rey. Through health challenges and career transitions, I’ve
+          found a passion for mindful living, CrossFit, and studying vegan
+          nutrition.
+        </p>
+      </div>
+    </div>
+
+    <div class="content2-container container bg-light">
+      <div class="row">
+        <div class="col-6 mt-5">
+          <h4>
+            <i class="fa-solid fa-graduation-cap icons"></i>
+            Education
+          </h4>
+          <p>
+            Architecture, Art History, Italian Studies, Vegan Nutrition, Web
+            Design
+          </p>
+        </div>
+        <div class="col-6 mt-5">
+          <h4>
+            <i class="fa-solid fa-briefcase icons"></i>
+            Professional Experience
+          </h4>
+          <p>
+            Architecture, Art History, Provenance Research, Compliance, (IT-)
+            Consulting, Project Management
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6 mt-5 mb-5">
+          <h4>
+            <i class="fa-solid fa-arrows-to-eye icons"></i>
+            Current Focus
+          </h4>
+          <p>
+            Studying to become a Frontend Developer and Vegan Nutritionist,
+            while working full-time as a Product Owner and Engagement Manager at
+            an IT consultancy
+          </p>
+        </div>
+        <div class="col-6 mt-5 mb-5">
+          <h4>
+            <i class="fa-solid fa-icons icons"></i>
+            Personal Interests
+          </h4>
+          <p>
+            CrossFit, Photography, Mindfulness, and nature walks with our dogs
+          </p>
         </div>
       </div>
     </div>
 
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
+      <a href="" class="btn btn-outline-secondary contact-button mt-5"
+        >Contact Me</a
+      >
       <a
         href="mailto:victoria.steinwachs@protonmail.com"
         class="email-link"
