--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
     <title>Contact Victoria</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container bg-light">
         <a class="navbar-brand" href="/index.html"
           >Victoria Louise Steinwachs</a
         >
