--- a/index.html
+++ b/index.html
@@ -97,13 +97,15 @@
           <p class="introduction-paragraph mt-5">
             Welcome! I'm Victoria, a creative spirit with a passion for people,
             furry friends, and a love for holistic health and design. My journey
-            has taken me from studying architecture and art history to exploring
-            Italian, diving into IT consulting, and discovering the power of
-            CrossFit and nutrition. After years in the bustling city of Berlin,
-            I’ve found my way to the peaceful coast of Schleswig-Holstein,
-            embracing a life rooted in mindfulness, thoughtful design, and
-            intentional living. Let’s explore together how to bring balance and
-            creativity to this busy world!
+            has taken me from the world of art history, architecture, Italian
+            and (IT-) consulting to exploring the deeper connection between web
+            design, wellness, and nutrition. After 10 years in Berlin, I moved
+            to the tranquil coast of Schleswig-Holstein with my partner and our
+            two Vizslas, Chewie and Rey (yes, you're right — someone here
+            <em>might</em> be a bit of a Star Wars fan). Through health
+            challenges and career transitions, I’ve found a passion for mindful
+            living, CrossFit, coding and studying vegan nutrition. Let’s explore
+            together how to bring balance and creativity to this busy world!
           </p>
         </div>
         <div class="col-6 img-container d-flex align-items-end">
