--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,8 @@
     <title>Project Portfolio: My Journey in Web Development</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light  fixed-top">
+      <div class="container bg-light">
         <a class="navbar-brand" href="/index.html"
           >Victoria Louise Steinwachs</a
         >
