Improve about page design

--- a/about.html
+++ b/about.html
@@ -102,19 +102,19 @@
       </div>
     </div>
 
-    <div class="content2-container container bg-light">
+    <div class="content2-container container bg-light d-none d-sm-block">
       <div class="row justify-content-center gap-5">
         <div class="col-6 col-md-4 mt-5 mb-5">
           <img
             src="/images/Vicky1.jpg"
-            class="rounded img-fluid img-about"
+            class="rounded img-fluid d-none d-sm-block img-about"
             alt="..."
           />
         </div>
         <div class="col-6 col-md-4 mt-5 mb-5">
           <img
             src="/images/Vicky2.jpg"
-            class="rounded img-fluid img-about"
+            class="rounded img-fluid d-none d-sm-block img-about"
             alt="..."
           />
         </div>
@@ -141,7 +141,7 @@
 
     <div class="content2-container container bg-light">
       <div class="row">
-        <div class="col-6 mt-5">
+        <div class="col-6">
           <h4>
             <i class="fa-solid fa-graduation-cap icons"></i>
             Education
@@ -151,7 +151,7 @@
             Design
           </p>
         </div>
-        <div class="col-6 mt-5">
+        <div class="col-6">
           <h4>
             <i class="fa-solid fa-briefcase icons"></i>
             Professional Experience
@@ -163,7 +163,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6 mt-5 mb-5">
+        <div class="col-6 mt-5">
           <h4>
             <i class="fa-solid fa-arrows-to-eye icons"></i>
             Current Focus
@@ -174,7 +174,7 @@
             an IT consultancy
           </p>
         </div>
-        <div class="col-6 mt-5 mb-5">
+        <div class="col-6 mt-5">
           <h4>
             <i class="fa-solid fa-icons icons"></i>
             Personal Interests
@@ -186,18 +186,14 @@
       </div>
     </div>
 
-    <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="" class="btn btn-outline-secondary contact-button mt-5"
+    <div
+      class="content-container container d-flex flex-column align-items-center"
+    >
+      <h2 class="text-center">Contact me</h2>
+      <a href="/contact.html" class="btn primary-link mt-3" target="_blank"
         >Contact Me</a
       >
-      <a
-        href="mailto:victoria.steinwachs@protonmail.com"
-        class="email-link"
-        title="Victoria's Email Address"
-      >
-        victoria.steinwachs@protonmail.com
-      </a>
+      <div class="wavy-line bg-light mt-5"></div>
     </div>
 
     <footer>
