Finish contend and design for about page

--- a/about.html
+++ b/about.html
@@ -90,52 +90,92 @@
 
     <div class="content-container container start-section">
       <div class="row">
-        <h1 class="mt-5 text-start h1-shadow-about">Hi, it's me</h1>
+        <h1 class="mt-5 text-start h1-shadow-about">Hi, it's me!</h1>
+        <h2 class="mt-3 text-start">Welcome to My World</h2>
         <div class="content text-start">
           <p class="mt-5">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
+            I'm really happy you're here, interested in my work and journey ♡.
+          </p>
+          <p>
+            A few months ago, my partner and I, along with our two Vizslas,
+            Chewie and Rey, moved from Berlin to the coast of Schleswig-Holstein
+            after over 10 years in the city — with a few stops along the way in
+            Frankfurt, London, and New York. The fresh air and natural
+            surroundings here have been incredible for me, especially after a
+            period when my body made it clear I needed to start listening to it.
+          </p>
+          <p>
+            After studying Architecture, Art History, and Italian, I spent years
+            in the art world and then with two of the Big Four before
+            transitioning into IT consulting — a path that, while rewarding, was
+            full of unexpected twists. It wasn’t always easy, partly due to
+            others' expectations but also my own. Many times, I found myself
+            wondering,
+            <em
+              >What if I fail? What if I’m not good enough? And was it really
+              the right choice to leave behind what I knew for something
+              unknown?</em
+            >
+            Now, I try to turn these thoughts around:
+            <em>But what if it all works out?</em>
           </p>
         </div>
-      </div>
-    </div>
 
-    <div class="content2-container container bg-light d-none d-sm-block">
-      <div class="row justify-content-center gap-5">
-        <div class="col-6 col-md-4 mt-5 mb-5">
-          <img
-            src="/images/Vicky1.jpg"
-            class="rounded img-fluid d-none d-sm-block img-about"
-            alt="..."
-          />
+        <div class="row justify-content-center d-none d-md-flex">
+          <div class="col-4 mt-5 mb-5">
+            <img
+              src="/images/Vicky1.jpg"
+              class="rounded img-fluid img-about"
+              alt="Victoria drinking coffee in Lübeck"
+            />
+          </div>
+          <div class="col-4 mt-5 mb-5">
+            <img
+              src="/images/Beach.JPG"
+              class="rounded img-fluid img-about"
+              alt="Victoria and Chewie at the beach"
+            />
+          </div>
+          <div class="col-4 mt-5 mb-5">
+            <img
+              src="/images/Vicky2.jpg"
+              class="rounded img-fluid img-about"
+              alt="Victoria drinking coffee in Lübeck"
+            />
+          </div>
         </div>
-        <div class="col-6 col-md-4 mt-5 mb-5">
-          <img
-            src="/images/Vicky2.jpg"
-            class="rounded img-fluid d-none d-sm-block img-about"
-            alt="..."
-          />
-        </div>
-      </div>
-    </div>
 
-    <div class="container content-container">
-      <div class="row">
-        <h2>Welcome to My World</h2>
-        <h3 class="mt-2">
-          Embracing Change: A Journey of Creativity and Well-Being
-        </h3>
-        <p class="mt-5">
-          Welcome! I’m Victoria, and my journey has taken me from the world of
-          architecture and IT consulting to exploring the deeper connection
-          between design, wellness, and nutrition. After 10 years in Berlin, I
-          moved to the tranquil coast of Schleswig-Holstein with my two Vizslas,
-          Chewie and Rey. Through health challenges and career transitions, I’ve
-          found a passion for mindful living, CrossFit, and studying vegan
-          nutrition.
-        </p>
+        <div class="content text-start">
+          <p>
+            This is exactly the mindset I hope to pass on to my younger
+            colleagues. Currently, I work full-time as a Product Owner and
+            Engagement Manager for a developer team spread across Europe. I’m a
+            huge fan of remote work (after all, it allows me to live where
+            others go on holiday), but it has its challenges too. Keeping the
+            team connected and creating a safe environment where they feel
+            supported and can thrive is something I genuinely enjoy. I believe
+            in continuous growth, and sometimes the best way to learn is through
+            making mistakes. After all, we’re all just human, and even if the
+            work is fulfilling, a supportive environment and attention to mental
+            health are essential for sustained well-being and motivation.
+          </p>
+          <p>
+            So, how did I get into web design? When I first started in IT
+            consulting, I was introduced to data warehouses, Python, and SQL,
+            and I remember wondering why it didn’t quite click for me. I enjoy
+            coding and have a love for languages, but something felt missing.
+            Then I stumbled upon SheCodes, and after the first mini-workshop, I
+            was hooked — the visual side was the missing link.
+          </p>
+          <p>
+            And here I am now! Even though it’s tough to keep up with learning
+            when you have a demanding full-time job, a household, two dogs, and
+            a fitness routine, finding that balance is worth it. Everything I’ve
+            learned so far also benefits my job, and I don’t regret for a second
+            having taken on a new challenge. I’m excited to see where this path
+            will lead!
+          </p>
+        </div>
       </div>
     </div>
 
@@ -201,6 +241,13 @@
         class="content-container container footer-container d-flex flex-column align-items-center"
       >
         <div class="social-links d-flex justify-content-evenly mb-4">
+          <a
+            href="mailto:victoria.steinwachs@protonmail.com"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
+            <i class="fa-solid fa-at"></i>
+          </a>
           <a
             href="https://www.linkedin.com/in/victoria-louise-steinwachs"
             target="_blank"
