--- a/contact.html
+++ b/contact.html
@@ -98,27 +98,7 @@
             Whether you're here for a chat, a collaboration, or just to say hi,
             I'd be happy to hear from you. Feel free to reach out however suits
             you best — email, LinkedIn, or even a carrier pigeon 🕊️ if you can
-            find one. Just like in Rome, there’s always a way to connect!
-          </p>
-          <p>
-            Feel free to reach out by email at
-            <a
-              href="mailto:victoria.steinwachs@protonmail.com"
-              class="email-link"
-              title="Victoria's Email Address"
-              >victoria.steinwachs@protonmail.com
-            </a>
-            — I’m always happy to connect!
-          </p>
-          <p>
-            Or find me on
-            <a
-              href="https://www.linkedin.com/in/victoria-louise-steinwachs"
-              target="_blank"
-              rel="noopener noreferrer"
-              >LinkedIn
-            </a>
-            for professional inquiries.
+            find one. Just like in Rome, there’s always a way to connect.
           </p>
         </div>
         <div class="col-6 container d-flex align-items-end">
@@ -129,6 +109,7 @@
           />
         </div>
       </div>
+      <div class="wavy-line bg-light mt-5"></div>
     </div>
 
     <footer>
@@ -136,6 +117,13 @@
         class="content-container container footer-container d-flex flex-column align-items-center"
       >
         <div class="social-links d-flex justify-content-evenly mb-4">
+          <a
+            href="mailto:victoria.steinwachs@protonmail.com"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
+            <i class="fa-solid fa-at"></i>
+          </a>
           <a
             href="https://www.linkedin.com/in/victoria-louise-steinwachs"
             target="_blank"
