--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="col-12 col-md-6 content introduction-content">
           <h2>PRODUCT OWNER WITH A PASSION FOR FRONTEND DEVELOPMENT</h2>
           <h1 class="mt-5 h1-shadow-hp">Victoria Louise Steinwachs</h1>
-          <p class="introduction-paragraph mt-5">
+          <p class="mt-5">
             Welcome! I'm Victoria, a creative spirit with a passion for people,
             furry friends, and a love for holistic health and design. My journey
             has taken me from the world of art history, architecture, Italian
@@ -113,67 +113,69 @@
       </div>
     </div>
 
-    <div class="card mt-5 container">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img
-            src="..."
-            class="img-fluid rounded-start d-none d-sm-block"
-            alt="About Page"
-          />
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h4 class="card-title">About Me</h4>
-            <p class="card-text">
-              From art history to IT, with a dash of Italian and a love for
-              health—my journey is anything but typical. Take a peek at what
-              brought me here!
-            </p>
-            <a href="/about.html" class="btn primary-link">About Me</a>
+    <div class="content2-container container bg-light">
+      <div class="card mt-5 container">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="/images/Screenshot_About.png"
+              class="img-fluid rounded-start d-none d-sm-block"
+              alt="About Page"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h4 class="card-title">About Me</h4>
+              <p class="card-text">
+                From art history to IT, with a dash of Italian and a love for
+                health—my journey is anything but typical. Take a peek at what
+                brought me here!
+              </p>
+              <a href="/about.html" class="btn primary-link">About Me</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="card mt-5 container">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img
-            src="..."
-            class="img-fluid rounded-start d-none d-sm-block"
-            alt="About Page"
-          />
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h4 class="card-title">My Projects</h4>
-            <p class="card-text">
-              Want to know more about my projects? Explore my portfolio.
-            </p>
-            <a href="/projects.html" class="btn primary-link">My Projects</a>
+      <div class="card mt-5 container">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="..."
+              class="img-fluid rounded-start d-none d-sm-block"
+              alt="About Page"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h4 class="card-title">My Projects</h4>
+              <p class="card-text">
+                Want to know more about my projects? Explore my portfolio.
+              </p>
+              <a href="/projects.html" class="btn primary-link">My Projects</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="card mt-5 container">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img
-            src="..."
-            class="img-fluid rounded-start d-none d-sm-block"
-            alt="About Page"
-          />
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h4 class="card-title">Contact Me</h4>
-            <p class="card-text">
-              Interested in collaborating or learning more about me and my work?
-              Let's connect!
-            </p>
-            <a href="/contact.html" class="btn primary-link">Contact Me</a>
+      <div class="card mt-5 container">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="..."
+              class="img-fluid rounded-start d-none d-sm-block"
+              alt="About Page"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h4 class="card-title">Contact Me</h4>
+              <p class="card-text">
+                Interested in collaborating or learning more about me and my
+                work? Let's connect!
+              </p>
+              <a href="/contact.html" class="btn primary-link">Contact Me</a>
+            </div>
           </div>
         </div>
       </div>
@@ -184,6 +186,13 @@
         class="content-container container footer-container d-flex flex-column align-items-center"
       >
         <div class="social-links d-flex justify-content-evenly mb-4">
+          <a
+            href="mailto:victoria.steinwachs@protonmail.com"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
+            <i class="fa-solid fa-at"></i>
+          </a>
           <a
             href="https://www.linkedin.com/in/victoria-louise-steinwachs"
             target="_blank"
