--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
         wait as I immersed myself in Python and SQL for consulting. With a
         background in art history and architecture, I knew a creative spark was
         missing in my daily life. Rediscovering SheCodes felt like finding a
-        long-lost passion, and diving into the world of coding just made sense.
+        long-lost passion, and diving into the world of coding just made sense. Take a look around, and feel free to get inspired!
       </p>
     </section>
 
@@ -199,51 +199,50 @@
         </div>
       </div>
     </div>
+
     <footer>
       <div
-        class="content-container container d-flex align-items-center justify-content-around"
+        class="content-container container footer-container d-flex flex-column align-items-center"
       >
-        <div>
-          <h3>Work Inquiry</h3>
-          <p>Let's work together</p>
+        <div class="social-links d-flex justify-content-evenly mb-4">
+          <a
+            href="mailto:victoria.steinwachs@protonmail.com"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
+            <i class="fa-solid fa-at"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/victoria-louise-steinwachs"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/fit.paws.and.sea.views/"
+            target="_blank"
+            title="Instagram Profile"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://github.com/vilouspics"
+            target="_blank"
+            title="Github Profile"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
         </div>
-        <div class="">
-          <a href="/contact.html" class="btn primary-link">Contact Me</a>
-        </div>
+        <p class="text-center mb-5">
+          This project was coded by Victoria Louise Steinwachs and is
+          <a
+            class="github-link"
+            href="https://github.com/vilouspics/My-project-portfolio"
+            >open-sourced</a
+          >.
+        </p>
       </div>
-
-      <div class="social-links d-flex justify-content-center">
-        <a
-          href="https://www.linkedin.com/in/victoria-louise-steinwachs"
-          target="_blank"
-          title="LinkedIn Profile"
-        >
-          <i class="fa-brands fa-linkedin"></i>
-        </a>
-        <a
-          href="https://www.instagram.com/fit.paws.and.sea.views/"
-          target="_blank"
-          title="Instagram Profile"
-        >
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a
-          href="https://github.com/vilouspics"
-          target="_blank"
-          title="Github Profile"
-        >
-          <i class="fa-brands fa-github"></i>
-        </a>
-      </div>
-      <p class="text-center mt-5">
-        This project was coded by Victoria Louise Steinwachs and is
-        <a
-          class="github-link"
-          href="https://github.com/vilouspics/My-project-portfolio"
-        >
-          open-sourced</a
-        >.
-      </p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
